Fix notifications for non-visible sessions.

Currently all notifications are deemed 'visible'.  This patch fixes
that so all non-visible sessions go to their own notifications.

Patch by Tijl Coosemans.

I'll backport to the 4.7 branch.
BUG: 174505
FIXED-IN: 2.7.1
REVIEW: 101720